--- a/index.html
+++ b/index.html
@@ -1,87 +1,562 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-        <script
-            src="https://kit.fontawesome.com/15198d5ddf.js"
-            crossorigin="anonymous"
-        ></script>
-    </head>
-    <body>
-        <header class="header fixed top-0 left-0 h-[4rem] pl-[7rem] w-full bg-white">
-            <div class="flex items-center justify-between gap-5 h-full">
-                <nav class="w-[25%] flex items-center">
-                    <ul class="flex gap-5 list-none m-0 p-0">
-                        <li class="nav-item underline">Photos</li>
-                        <li class="nav-item">Albums</li>
-                    </ul>
-                </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Demo 1 - liquidGL WebGL - NaughtyDuk©</title>
+    <link rel="icon" href="/assets/favicon.ico" />
+    <style>
+      :root {
+        --text-color: #333333;
+        --bg-color: #f0f0f0;
+        --secondary-text: rgba(0, 0, 0, 0.5);
+        scroll-behavior: auto;
+      }
 
-                <div class="w-[100%] px-5">
-                    <form class="w-full" role="search" aria-label="Site search">
-                        <div class="flex">
-                            <div class="relative w-full">
-                                <input
-                                    type="search"
-                                    id="search-dropdown"
-                                    class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-l-lg rounded-r-none border border-gray-300 focus:ring-blue-500 focus:border-blue-500"
-                                    placeholder="Rechercher..."
-                                    required
-                                />
-                                <button
-                                    type="submit"
-                                    class="absolute top-0 right-0 p-2.5 text-sm font-medium h-full text-white bg-blue-700 rounded-r-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300"
-                                    aria-label="Search"
-                                >
-                                    <svg
-                                        class="w-4 h-4"
-                                        aria-hidden="true"
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        fill="none"
-                                        viewBox="0 0 20 20"
-                                    >
-                                        <path
-                                            stroke="currentColor"
-                                            stroke-linecap="round"
-                                            stroke-linejoin="round"
-                                            stroke-width="2"
-                                            d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
-                                        />
-                                    </svg>
-                                    <span class="sr-only">Rechercher</span>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Helvetica, Arial, sans-serif;
+        background-color: var(--bg-color);
+        color: var(--text-color);
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        line-height: 1.5;
+      }
+
+      /* Global Navigation Styles */
+      .global-nav {
+        position: fixed;
+        top: 1rem;
+        left: 1rem;
+        z-index: 10000;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Helvetica, Arial, sans-serif;
+      }
+
+      .nav-container {
+        background: rgb(9 9 11 / 85%);
+        backdrop-filter: blur(16px);
+        border-radius: 12px;
+        border: 0.5px solid #1e1e20;
+        overflow: hidden;
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: 0 4px 16px rgb(0 0 0 / 20%);
+      }
+
+      .nav-toggle {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 12px 16px;
+        background: transparent;
+        border: none;
+        color: #fafafa;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: 500;
+        width: 100%;
+        text-align: left;
+        transition: all 0.2s ease;
+      }
+
+      .nav-toggle:hover {
+        background: rgb(39 39 42 / 50%);
+      }
+
+      .nav-toggle svg {
+        width: 16px;
+        height: 16px;
+        fill: currentColor;
+        transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      }
+
+      .nav-container.expanded .nav-toggle svg {
+        transform: rotate(180deg);
+      }
+
+      .nav-menu {
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      }
+
+      .nav-container.expanded .nav-menu {
+        max-height: 300px;
+      }
+
+      .nav-item {
+        display: block;
+        padding: 10px 16px;
+        color: #a1a1aa;
+        text-decoration: none;
+        font-size: 13px;
+        font-weight: 400;
+        transition: all 0.2s ease;
+        border-top: 0.5px solid #1e1e20;
+        position: relative;
+        cursor: pointer;
+      }
+
+      .nav-item:hover {
+        background: rgb(39 39 42 / 50%);
+        color: #fafafa;
+      }
+
+      .nav-item.active {
+        color: #fafafa;
+        background: rgb(39 39 42 / 30%);
+      }
+
+      .nav-item.active::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        width: 2px;
+        background: #fafafa;
+      }
+
+      @media (max-width: 768px) {
+        .global-nav {
+          top: 0.5rem;
+          left: 0.5rem;
+        }
+
+        .nav-toggle {
+          padding: 10px 14px;
+          font-size: 13px;
+        }
+
+        .nav-item {
+          padding: 8px 14px;
+          font-size: 12px;
+        }
+      }
+      .image-container {
+        overflow: clip;
+        position: relative;
+        z-index: 1;
+        transform: translate3d(0, 0, 0);
+        height: 100svh;
+        padding: 5vw;
+        background: #ececec;
+      }
+
+      @media (max-width: 768px) {
+        .image-container {
+          height: 100svh;
+        }
+        .menu-anchor {
+          bottom: 1rem;
+        }
+      }
+
+      .image-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        will-change: transform;
+        border-radius: 2.5vw;
+      }
+
+      /* --- Menu Styles --- */
+      .menu-anchor {
+        z-index: 9999;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        position: fixed;
+        inset: 0;
+        pointer-events: none;
+        mix-blend-mode: difference;
+      }
+
+      .menu-anchor a {
+        pointer-events: auto;
+      }
+
+      .menu-link-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.75rem;
+        text-decoration: none;
+      }
+
+      .menu-wrap {
+        display: flex;
+        align-items: center;
+        padding: 1rem;
+        gap: 1rem;
+        border-radius: 1.5vw;
+        justify-content: flex-start;
+        position: relative;
+        overflow: clip;
+        background: rgba(255, 255, 255, 0.1); /* Fallback */
+        backdrop-filter: blur(20px) saturate(180%); /* Basic blur for non-WebGL */
+        will-change: transform;
+      }
+
+      @media (max-width: 768px) {
+        .menu-wrap {
+          border-radius: 5vw;
+        }
+      }
+
+      .menu-item-stack {
+        display: flex;
+        flex-direction: column;
+      }
+
+      .menu-logo-wrap,
+      .menu-items-wrap,
+      .menu-item-text {
+        z-index: 3;
+      }
+
+      .menu-items-wrap {
+        display: flex;
+        gap: 0.5rem;
+        align-items: center;
+      }
+
+      .menu-item-text {
+        color: #b7b7b7;
+        font-weight: 700;
+        letter-spacing: -0.04rem;
+      }
+
+      .small-text-link {
+        font-size: 0.8rem;
+        color: #b7b7b7;
+        font-weight: 600;
+        letter-spacing: -0.02rem;
+      }
+
+      .menu-item {
+        padding: 0.5rem;
+        border-radius: 0.25vw;
+        justify-content: center;
+        align-items: center;
+        width: 2.25rem;
+        height: 2.25rem;
+        display: flex;
+        overflow: clip;
+      }
+
+      .menu-item-link {
+        display: block;
+      }
+
+      .menu-icon {
+        width: 24px;
+        height: 24px;
+        filter: invert(1);
+        opacity: 0.8;
+        transition: opacity 0.2s ease;
+      }
+
+      .menu-item-link:hover .menu-icon {
+        opacity: 1;
+      }
+
+      .menu-logo-wrap {
+        display: flex;
+        align-items: center;
+      }
+
+      .menu-logo {
+        height: 2.25rem;
+      }
+
+      .download-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .download-link {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        text-decoration: none; /* remove underline from link */
+      }
+      .download-icon {
+        width: 0.75rem;
+        height: 0.75rem;
+      }
+      .version-text {
+        font-size: 0.75rem;
+        color: #b7b7b7;
+        letter-spacing: 0.02rem;
+        font-weight: 500;
+      }
+
+      .ripples {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        filter: invert(1);
+        opacity: 0.3;
+      }
+
+      .lil-gui {
+        --focus-color: #f5f5f5;
+        --number-color: #f5f5f5;
+      }
+
+      .lil-gui.autoPlace {
+        z-index: 10000;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Global Navigation -->
+    <nav class="global-nav">
+      <div class="nav-container">
+        <button
+          class="nav-toggle"
+          aria-expanded="false"
+          aria-label="Toggle navigation menu"
+        >
+          <span>Demos</span>
+          <svg viewBox="0 0 16 16">
+            <path d="M8 11L3 6h10l-5 5z" />
+          </svg>
+        </button>
+        <div class="nav-menu">
+          <a href="../index.html" class="nav-item">Index</a>
+          <a href="demo-1.html" class="nav-item active">D1 - Nav Bar</a>
+          <a href="demo-2.html" class="nav-item">D2 - Bank Card</a>
+          <a href="demo-3.html" class="nav-item">D3 - Animate</a>
+          <a href="demo-4.html" class="nav-item">D4 - Cards</a>
+          <a href="demo-5.html" class="nav-item">D5 - Reveal</a>
+        </div>
+      </div>
+    </nav>
+    <div class="ripples"></div>
+    <div class="main-content">
+      <div class="image-container">
+        <img
+          src="/assets/liquid-bkg-_0000_Comp-33.webp"
+          alt="Abstract colorful wallpaper"
+        />
+      </div>
+
+      <div class="image-container">
+        <img
+          src="/assets/liquid-bkg-_0001_Comp-183.webp"
+          alt="Abstract colorful wallpaper"
+        />
+      </div>
+
+      <div class="image-container">
+        <img
+          src="/assets/liquid-bkg-_0002_Comp-163.webp"
+          alt="Abstract colorful wallpaper"
+        />
+      </div>
+
+      <div class="image-container">
+        <img
+          src="/assets/liquid-bkg-_0003_Comp-151.webp"
+          alt="Abstract colorful wallpaper"
+        />
+      </div>
+
+      <div class="image-container">
+        <img
+          src="/assets/liquid-bkg-_0004_Comp-13.webp"
+          alt="Abstract colorful wallpaper"
+        />
+      </div>
+    </div>
+
+    <!-- The menu element that will have the glass effect applied -->
+    <div class="menu-anchor">
+      <a
+        href="https://github.com/naughtyduk/liquidGL"
+        style="text-decoration: none"
+        target="_blank"
+      >
+        <div class="menu-wrap">
+          <div class="menu-logo-wrap">
+            <img
+              src="/assets/naughtyduk-logo.svg"
+              loading="lazy"
+              alt="NaughtyDuk©"
+              class="menu-logo"
+            />
+          </div>
+          <div class="menu-items-wrap">
+            <div class="menu-item-stack">
+              <p class="menu-item-text">liquidGL by NaughtyDuk©</p>
+              <div class="download-wrapper">
+                <div class="download-link">
+                  <img
+                    src="/assets/download-icon.svg"
+                    alt="Download"
+                    class="download-icon"
+                  />
+                  <p class="small-text-link">Download</p>
                 </div>
+                <p class="version-text">v1.0.0</p>
+              </div>
             </div>
-        </header>
-        <nav
-            class="sidebar fixed w-[5rem] h-[100vh] bg-white p-4 text-zinc-900 flex flex-col rounded-r-2xl shadow-2xl"
-        >
-        >
-            <img class="mb-4" src="/public/assets/logo.svg" alt="Logo" />
+          </div>
+        </div>
+      </a>
+    </div>
 
-            <ul class="grid grid-cols-1 text-[1.4rem] gap-3 text-center">
-                <li class="nav-item">
-                    <a href="/"><i class="fa-solid fa-house"></i></a>
-                </li>
-                <li class="nav-item">
-                    <button><i class="fa-solid fa-folder-plus"></i></button>
-                </li>
-                <li class="nav-item">
-                    <button><i class="fa-solid fa-user"></i></button>
-                </li>
-            </ul>
+    <!-- Libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lil-gui@0.20/dist/lil-gui.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.ripples@0.6.3/dist/jquery.ripples.min.js"></script>
 
-            <div class="flex-1"></div>
+    <script>
+      let glassEffect; // Declare in a higher scope to be accessible across event listeners
 
-            <div class="nav-item text-[1.4rem] text-center">
-                <i class="fa-solid fa-gear"></i>
-            </div>
-        </nav>
-    </body>
+      document.addEventListener("DOMContentLoaded", () => {
+        /* Global Navigation Setup */
+        const navToggle = document.querySelector(".nav-toggle");
+        const navContainer = document.querySelector(".nav-container");
+
+        if (navToggle && navContainer) {
+          navToggle.addEventListener("click", () => {
+            const isExpanded = navContainer.classList.contains("expanded");
+            navContainer.classList.toggle("expanded");
+            navToggle.setAttribute("aria-expanded", !isExpanded);
+          });
+
+          // Close navigation when clicking outside
+          document.addEventListener("click", (e) => {
+            if (!navContainer.contains(e.target)) {
+              navContainer.classList.remove("expanded");
+              navToggle.setAttribute("aria-expanded", "false");
+            }
+          });
+
+          // Close navigation when pressing Escape
+          document.addEventListener("keydown", (e) => {
+            if (
+              e.key === "Escape" &&
+              navContainer.classList.contains("expanded")
+            ) {
+              navContainer.classList.remove("expanded");
+              navToggle.setAttribute("aria-expanded", "false");
+            }
+          });
+        }
+
+        initializeliquidGL(); // Call immediately on DOM ready
+
+        // Ripples
+        $(".ripples").each(function () {
+          const $this = $(this);
+          $this.ripples({
+            resolution: 512,
+            dropRadius: 20,
+            perturbance: 0.04,
+            interactive: true,
+          });
+        });
+
+        // A function to initialize the glass effect and its controls
+        function initializeliquidGL() {
+          let gui, glassFolder;
+          // Initialize the Liquid Glass effect on our menu
+          glassEffect = liquidGL({
+            target: ".menu-wrap",
+            refraction: 0,
+            bevelDepth: 0.052,
+            bevelWidth: 0.211,
+            frost: 2,
+            shadow: true,
+            specular: true,
+            tilt: false,
+            tiltFactor: 5,
+            reveal: "fade",
+          });
+
+          // Build GUI after liquidGL initialised (multi-awareness)
+          const lensList = Array.isArray(glassEffect)
+            ? glassEffect
+            : [glassEffect];
+          const firstLens = lensList[0];
+
+          if (firstLens) {
+            gui = new lil.GUI();
+            glassFolder = gui.addFolder("liquidGL Effect");
+
+            const updateAll = (key, value) => {
+              lensList.forEach((ln) => {
+                if (!ln) return;
+                ln.options[key] = value;
+                if (key === "shadow") ln.setShadow(value);
+                if (key === "tilt") ln.setTilt(value);
+              });
+            };
+
+            glassFolder
+              .add(firstLens.options, "refraction", 0, 0.1, 0.001)
+              .onChange((v) => updateAll("refraction", v));
+
+            glassFolder
+              .add(firstLens.options, "bevelDepth", 0, 0.2, 0.001)
+              .onChange((v) => updateAll("bevelDepth", v));
+
+            glassFolder
+              .add(firstLens.options, "bevelWidth", 0, 0.5, 0.001)
+              .onChange((v) => updateAll("bevelWidth", v));
+
+            glassFolder
+              .add(firstLens.options, "frost", 0, 10, 0.1)
+              .onChange((v) => updateAll("frost", v));
+
+            glassFolder
+              .add(firstLens.options, "magnify", 1, 5, 0.1)
+              .onChange((v) => updateAll("magnify", v));
+
+            glassFolder
+              .add(firstLens.options, "shadow")
+              .onChange((v) => updateAll("shadow", v));
+
+            glassFolder
+              .add(firstLens.options, "specular")
+              .onChange((v) => updateAll("specular", v));
+
+            glassFolder
+              .add(firstLens.options, "tilt")
+              .onChange((v) => updateAll("tilt", v));
+
+            glassFolder
+              .add(firstLens.options, "tiltFactor", 0, 25, 0.1)
+              .onChange((v) => updateAll("tiltFactor", v));
+
+            glassFolder
+              .add(firstLens.options, "reveal", ["none", "fade"])
+              .onChange((v) => updateAll("reveal", v));
+
+            glassFolder.close();
+          }
+        }
+
+        /* 3. Lenis + GSAP ticker sync */
+        window.addEventListener("load", () => {
+          liquidGL.syncWith();
+        });
+      });
+    </script>
+  </body>
 </html>
